--- a/Project_Write-up.ipynb
+++ b/Project_Write-up.ipynb
@@ -13,9 +13,9 @@
    "source": [
     "## Our Data and Questions\n",
     "\n",
-    "We began with the 500 cities data released by the CDC in 2018. This data measured 27 indicators of health related to unhealthy behaviours, preventative health measures, and health outcomes (in the form of chronic disease). The data was from the 500 largest U.S. cities, from 2015 and 2016.\n",
+    "We began with the 500 cities data released by the CDC in 2018. This data measured 27 indicators of health related to unhealthy behaviors, preventative health measures, and health outcomes (in the form of chronic disease). The data was from the 500 largest U.S. cities, from 2015 and 2016.\n",
     "\n",
-    "The data source had aggragations at the census tract (zip code based), city, and state level. We decided to focus on the city level.\n",
+    "The data source had aggregations at the census tract (zip code based), city, and state level. We decided to focus on the city level.\n",
     "\n",
     "Our first question: What factors impact health outcomes? More specifically:\n",
     "* Does obesity related to negative health outcomes?\n",
@@ -31,9 +31,9 @@
     "\n",
     "Our data preparation aimed at:\n",
     "* Reducing the data size\n",
-    "* Removing extraneaous columns\n",
+    "* Removing extraneous columns\n",
     "* Combining the 500 cities with census data\n",
-    "* Outputing a csv file that the group could use for analysis\n",
+    "* Outputting a csv file that the group could use for analysis\n",
     "\n",
     "Though several other groups struggled with getting and using the government census data, as well as the weather data, we were fortunate to figure out how to overcome those issues (though we ended up not using weather data for the presentation).\n",
     "\n",
@@ -41,19 +41,17 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Our Analysis\n",
     "\n",
-    "Our first question was deliberately designed to be obvious, in order to test our expectactions against an unfamiliar data source. As expected, we found an extremely strong correlation between obesity and our selected negative health outcomes (coronary hearth disease, diabetes, and high blood pressure). The correlation output supports this conclusion.\n",
+    "Our first question was deliberately designed to be obvious, in order to test our expectations against an unfamiliar data source. As expected, we found an extremely strong correlation between obesity and our selected negative health outcomes (coronary heart disease, diabetes, and high blood pressure). The correlation output supports this conclusion.\n",
     "\n",
     "<img src=\"./output/corr01.png\">"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -63,7 +61,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -73,7 +70,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -85,7 +81,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -95,7 +90,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -114,6 +108,19 @@
     "Since we observed a relationship between economic conditions and lack of health insurance, and between lack of health insurance and negative health outcomes, we can conclude that economic conditions are a factor in poor health. \n",
     "\n",
     "However, the relationship between economic considerations and poor sleep is only moderate, whereas the relationship between poor sleep and poor health is stronger. This suggests that, even outside of economic concerns, sleep may have a more significant impact on health. This is possible due to the physical impact of lack of sleep on the body, which would occur whether or not you have health insurance, and regardless of your economic status."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lessons Learned\n",
+    "\n",
+    "We would have liked to do more intense, statistical analysis, but lacked both the time and the required skills. \n",
+    "\n",
+    "We struggled with such a large and complex dataset. There were many distracting squirrels to chase!\n",
+    "\n",
+    "Despite the note above, we wish we could have examined other census data, like age, ethnicity, and gender. Also, we would have liked to look at other preventative health measures like screenings and doctor visits, as well as negative behaviors, such as binge drinking and smoking."
    ]
   },
   {
